[project]
name = "Skyfall"
version = "2024.11.1"
dependencies = [
  "pygame-ce==2.5.2",
  "pygbag==0.9.2",
  "pyinstaller==6.11.1"
]
requires-python = ">=3.10"
authors = [
  {name = "Jonathan LaCour", email = "no-reply@missioncloud.com"}
]
maintainers = [
  {name = "Jonathan LaCour", email = "no-reply@missioncloud.com"}
]
description = "Skyfall: a simple game"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pygame"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://missioncloud.com"
Repository = "https://github.com/cleverdevil/Skyfall.git"
"Bug Tracker" = "https://github.com/cleverdevil/Skyfall/issues"

[tool.setuptools]
py-modules=["main", "leaderboard"]
